@@ -8,6 +8,7 @@
   #method: "GET"
   #request.enabled: false
   #response.enabled: false
+  #dedot.enabled: false
 
 - module: http
   metricsets: ["server"]
